test/invalid-syntax/fc51601_returnless_signature/returnless.mag
--- Author: fc51601, José Sousa

-- functions must declare their return type

fun func1 (_) : Unit = print("Is this a lambda?")
fun main (_) : Unit = func1()